<resources>
    <string name="app_name">ToDo</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_with_the_following_options">Sign up with the following options</string>
    <string name="google_sign_up">Button</string>
    <string name="apple_sign_up">Button</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="create_acc">Create Account</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_pass">Forgot Password?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">home</string>
    <string name="add_note">Add Note</string>
    <string name="hello_velma">Hello Velma</string>
    <string name="note">Note</string>
    <string name="profile">Profile</string>
    <string name="draft">Draft</string>
    <string name="logo">logo</string>
    <string name="login_text">Log in</string>
    <string name="notes">Notes</string>
    <string name="priority">Priority</string>
    <string name="title">Title</string>
    <string name="cont">Continue</string>
</resources>